# AI-infra-troubleshooting-agent

./: Dockerfile  LICENSE  README.md  agent.py  app.py  docker-compose.yml  pyproject.toml  tools.py
deployment/: prometheus.yml
deployment/helm/infra-agent/: Chart.yaml  values.yaml
deployment/helm/infra-agent/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml
deployment/k8s_manifests/: configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
pipelines/: __init__.py  ingestion_pipeline.py
vector_db/: __init__.py  knowledge_store.py
