[tool.poetry]
name = "infra-troubleshooting-agent"
version = "1.0.0"
description = "AI Infrastructure Troubleshooting Agent - An Agentic AI SRE Assistant for Kubernetes"
authors = ["AI Infrastructure Team"]
readme = "README.md"
packages = [{include = "pipelines"}, {include = "vector_db"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-core = "^0.3.0"
kubernetes = "^31.0.0"
chromadb = "^0.5.0"
prometheus-api-client = "^0.5.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
prometheus-client = "^0.21.0"
httpx = "^0.27.0"
pyyaml = "^6.0"
tenacity = "^9.0.0"
openai = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0"
ruff = "^0.6.0"
mypy = "^1.11"
respx = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
